tests/NormalTests/paczka1/fuzzy1/68948725.err
Error in line 5: S120 A61 98,9
Error in line 7: ucS S120 73,4
Error in line 3: 75C3xEA A753 51,2
Error in line 13: 75C3xEA A61 70,0
Error in line 20: vIgoXn A61 48,4
Error in line 28: LDrx8ulS S120 5,1
Error in line 35: 75C3xEA S620 103,8
Error in line 23: S120 S120 156,2
